--- a/Aplikasi/css/style.css
+++ b/Aplikasi/css/style.css
@@ -1,18 +1,18 @@
-body {
-  background-color: white;
+/* body {
+  background-color: blue;
   margin: auto;
   width: 50%;
   padding: 30px;
   border: 3px solid black;
-}
+} */
 
-img {
+/* img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	height: 500px;
 	width: 900px;
-}
+} */
 
 h1 {
 	text-align: center;
